--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header {
 main{
     background-color: var(--white);
     padding: 2rem;
+    border-radius: 1.5625rem 1.5625rem 0 0;
 }
 
 .conta,
@@ -40,7 +41,8 @@ main{
 }
 
 .conta label,
-.gorjeta label{
+.gorjeta label
+.pessoas label{
     color: var(--green-500);
     font-weight: 700;
 }
@@ -111,4 +113,37 @@ main{
 
 .pessoas #erro{
     display: none;
+}
+
+.resultados {
+    background-color: var(--green-800);
+    border-radius: 0.9375rem;
+    padding: 1.5rem;
+}
+
+.resultados div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.resultados p{
+    color: var(--green-400);
+    font-size: 0.8125rem;
+
+}
+
+.resultados p strong{
+    color: var(--white);
+    font-size: 1rem;
+}
+
+.resultados div>strong{
+    color: var(--light-green);
+    font-size: 2rem;
+    letter-spacing: 0;
+}
+
+.resultados .gorjeta-total{
+    margin-bottom: 1.25rem;
 }
