--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     --green-800: #00474b;
     --light-green: #26c2ae;
     --white: #fff;
+    --green-hover:#9fe8df;
+    --danger:#e17457;
 }
 
 body {
@@ -48,7 +50,7 @@ main {
 }
 
 .conta div,
-.pessoas div {
+.pessoas .input-box {
     margin-top: 0.4rem;
     background-color: var(--green-100);
     padding: 0.4rem 1.2rem;
@@ -76,7 +78,11 @@ main {
 }
 
 .conta:has(input:focus) div,
-.pessoas:has(input:focus) div {
+.conta.conta:has(input:hover) div,
+.pessoas:has(input:focus) .input-box,
+.pessoas:has(input:hover) .input-box,
+.gorjeta #outra:focus,
+.gorjeta #outra:hover {
     outline: 2px solid var(--light-green);
 }
 
@@ -100,6 +106,12 @@ main {
     color: var(--white);
 }
 
+.gorjeta input[type="button"]:hover,
+.resultados button:hover{
+    background-color: var(--green-hover);
+    cursor: pointer;
+}
+
 .gorjeta #outra {
     width: 100%;
     background-color: var(--green-100);
@@ -111,7 +123,20 @@ main {
 }
 
 
-.pessoas #erro {
+.pessoas .textos {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pessoas #erro-div{
+    outline: 2px solid var(--danger);
+}
+
+.pessoas #erro{
+    font-size: 0.75rem;
+    color: var(--danger);
+    font-weight: 700;
     display: none;
 }
 
@@ -163,17 +188,24 @@ main {
     padding-block: 0.5rem;
 }
 
+.conta input::-webkit-inner-spin-button,
+.pessoas input::-webkit-inner-spin-button,
+.gorjeta #outra::-webkit-inner-spin-button{
+    display: none;
+    cursor: pointer;
+}
+
 @media(min-width:920px) {
     body {
         display: flex;
         flex-direction: column;
-        min-height: 10svh;
+        min-height: 100svh;
         justify-content: center;
         gap: 5rem;
     }
 
     header {
-        padding-top:0rem;
+        padding:0rem;
     }
 
     main {
@@ -189,10 +221,7 @@ main {
         width: 100%;
     }
     
-    .conta input::-webkit-inner-spin-button,
-    .pessoas input::-webkit-inner-spin-button{
-        display: none;
-    }
+
     .gorjeta div {
         grid-template-columns: 1fr 1fr 1fr;
     }
