quarto commit do JS  e ,FINALMENTE, projeto FINALIZADO

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ main {
 .gorjeta #outra {
     width: 100%;
     background-color: var(--green-100);
-    color: var(var(--green-800));
+    color: var(--green-800);
 }
 
 .gorjeta #outra::placeholder {
